# ChangeLog for dev-python/pygtksourceview
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtksourceview/ChangeLog,v 1.25 2009/04/28 10:57:18 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  pygtksourceview-2.4.0.ebuild:
  arm/sh stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  pygtksourceview-2.4.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  pygtksourceview-2.4.0.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  pygtksourceview-2.4.0.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  pygtksourceview-2.4.0.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> pygtksourceview-2.4.0.ebuild:
  Marking pygtksourceview-2.4.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> pygtksourceview-2.4.0.ebuild:
  Marking pygtksourceview-2.4.0 ppc64 stable for bug 260063

  14 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  pygtksourceview-2.0.0-r1.ebuild, pygtksourceview-2.2.0.ebuild,
  pygtksourceview-2.4.0.ebuild:
  Add python_need_rebuild per bug #244610.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> pygtksourceview-2.2.0.ebuild:
  Marking pygtksourceview-2.2.0 ppc64 stable for bug 236971

*pygtksourceview-2.4.0 (19 Oct 2008)

  19 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +pygtksourceview-2.4.0.ebuild:
  New version for GNOME 2.24. Drop gnome-vfs dependency and requires new
  gtksourceview-2.3.

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> pygtksourceview-2.2.0.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  pygtksourceview-2.2.0.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org>
  pygtksourceview-2.2.0.ebuild:
  x86 stable, bug #229709
