@@ -1,4 +1,6 @@
 DIST pygtksourceview-2.4.0.tar.bz2 271360 RMD160 88a94afde4892f1bf05d8a4b5be668f5e3f53f84 SHA1 5b61ca338b6b80a9ee8448a77c78ce8e188730fc SHA256 437fb779bc0bd9a43806ee7b3a406a1329800e54489cd9579ea0a101870df791
+DIST pygtksourceview-2.6.0.tar.bz2 271314 RMD160 e6aa7009d9e9f07294ffc637768cbc3f534ca5c5 SHA1 480742c6ea15e2c6f3d864fae4708ef528fade0f SHA256 77acb735fee997a1638c79256b9dcf592566d066b54a72eb4321909f98f66178
 EBUILD pygtksourceview-2.4.0.ebuild 1030 RMD160 8ea4e92121b8f42e43db9c2e46463bb77d27f186 SHA1 7b87be68893bf36977462bdbc4f7f500638a777f SHA256 47aadc6dbf8bd15042d0f419e6ba032b9d785b6ae0772214395ced09bd1f663d
-MISC ChangeLog 3711 RMD160 f7052f8e4bfd65135641339194f2af7a8f9bc6c2 SHA1 05a822b0263698c85896e4d491b8c932301a13a3 SHA256 094871411f735275790505f4aa1b2b2d8c995e8a5232ece827e726e7c8328488
+EBUILD pygtksourceview-2.6.0.ebuild 900 RMD160 4f8b7678a88adf735c7146f40ea2b451d90685b5 SHA1 6f8516e757cd28c4ae1cd2f71285d082e3e3c8b7 SHA256 497997370ffc285372bcd4eb890e5dad89955bb25fd1157f774677c3d82f302b
+MISC ChangeLog 3953 RMD160 6500e8db0af61629a60f5bd1197e424bb8be4fb7 SHA1 40cf728633929a5521774df526b9db82f7a70c7b SHA256 26dbc5f322ac61d7a3e25e96c0e62f02342ec918525b1d1cafb2452deb90ad25
 MISC metadata.xml 280 RMD160 812e660e11fe666e7a502ec75a650d031ea4a6d1 SHA1 d9a7136e084f474c48cae426007d652c9796c164 SHA256 af5f516e8bf509a419d10d14c0c199a775f73ed5baae35d40437176424eee65b
